recreate/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: syndicationservices
  name: cop-demo-api
spec:
  replicas: 3 #
  strategy: #
    type: Recreate
  selector:
    matchLabels:
      app: cop-demo-api #
  template:
    metadata:
      labels:
        app: cop-demo-api
    spec:
      securityContext: #
        runAsUser: 1000
      containers: #
        - name: cop-demo-api
          image: 123456789.dkr.ecr.us-east-1.amazonaws.com/syndication/k8-demo:recreate #rollout
          ports:
            - name: http
              containerPort: 3000
